// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-3z78jo-ItemContainer {
  display: inline;
}

.cache-3z78jo-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.cache-3z78jo-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-eitll2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-eitll2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-eitll2-StyledLink>* {
  pointer-events: none;
}

.cache-eitll2-StyledLink:hover,
.cache-eitll2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-eitll2-StyledLink:hover .e1afnb7a2,
.cache-eitll2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-eitll2-StyledLink:hover::after,
.cache-eitll2-StyledLink:focus::after {
  background-color: #390171;
}

.cache-eitll2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      <li
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        <a
          class="cache-eitll2-StyledLink e1afnb7a0"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        <a
          class="cache-eitll2-StyledLink e1afnb7a0"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with invalid child 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      Invalid child
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with onClick 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-3z78jo-ItemContainer {
  display: inline;
}

.cache-3z78jo-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.cache-3z78jo-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-eitll2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-eitll2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-eitll2-StyledLink>* {
  pointer-events: none;
}

.cache-eitll2-StyledLink:hover,
.cache-eitll2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-eitll2-StyledLink:hover .e1afnb7a2,
.cache-eitll2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-eitll2-StyledLink:hover::after,
.cache-eitll2-StyledLink:focus::after {
  background-color: #390171;
}

.cache-eitll2-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-12l1cwf-ItemContainer {
  display: inline;
  cursor: pointer;
}

.cache-12l1cwf-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.cache-12l1cwf-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-12l1cwf-ItemContainer[aria-disabled="true"] {
  pointer-events: none;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      <li
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        <a
          class="cache-eitll2-StyledLink e1afnb7a0"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        <a
          class="cache-eitll2-StyledLink e1afnb7a0"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-12l1cwf-ItemContainer ej0p0s40"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with selected item 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-3z78jo-ItemContainer {
  display: inline;
}

.cache-3z78jo-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.cache-3z78jo-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-eitll2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-eitll2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-eitll2-StyledLink>* {
  pointer-events: none;
}

.cache-eitll2-StyledLink:hover,
.cache-eitll2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-eitll2-StyledLink:hover .e1afnb7a2,
.cache-eitll2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-eitll2-StyledLink:hover::after,
.cache-eitll2-StyledLink:focus::after {
  background-color: #390171;
}

.cache-eitll2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl ej0p0s41"
    >
      <li
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        <a
          class="cache-eitll2-StyledLink e1afnb7a0"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        <a
          class="cache-eitll2-StyledLink e1afnb7a0"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-3z78jo-ItemContainer ej0p0s40"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
